--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 .App {
   text-align: center;
+
+  padding: 4rem;
+  height: 100%;
+  min-height: calc(100vh - 60px);
+
+  height: 100vh;
 }
 
 .App-logo {
