--- a/src/App.css
+++ b/src/App.css
@@ -4,27 +4,14 @@
 }
 .App {
   text-align: center;
-
-  padding: 4rem;
+  margin: 0 rem;
+  padding: 0rem;
   height: 100%;
   min-height: calc(100vh - 60px);
-
-  height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
