--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
-* {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-}
 .App {
   text-align: center;
-  margin: 0 rem;
-  padding: 0rem;
-  height: 100%;
-  min-height: calc(100vh - 60px);
 }
 
 .App-logo {
   height: 40vmin;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
