--- a/src/components/Wheel.css
+++ b/src/components/Wheel.css
@@ -1,5 +1,5 @@
 :root {
-    --colors: #ffffff, #000000;
+    --colors: #9ED110, #50B517, #179067, #476EAF, #9f49ac, #CC42A2, #FF3BA7, #FF5800, #FF8100, #FEAC00, #FFCC00, #EDE604;
 }
 
 .conic:before{
@@ -7,8 +7,19 @@
 }
 
 .conic {
-    background-image: conic-gradient('red', 'blue', 'green');
+    background-image: conic-gradient(var(--colors));
     height: 200px;
     width: 200px;
     border-radius: 50%;
 }
+
+/* 
+    filter: blur(4pt);
+    margin: 0;
+    display: flex;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 100%;
+    box-shadow: inset 0 0 0 40px rgba(0, 0, 0, 0.6);
+ */
